--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         "foto5.jpg",
         "foto6.png",
         "foto7.jpg",
-        "foto3.png",
+        "foto9.jpg",
         "foto8.jpg",
       ];
 
